<!DOCTYPE resources [<!ENTITY appName "500PaperXrawler">]>
<resources>
    <string name="app_name" translatable="false">&appName;</string>
    <string name="app_name_version_key" translatable="false">app_name_version_name</string>
    <string name="app_name_version_title" translatable="false">&appName; %1$s</string>
    <string name="app_name_version_summary">Tap to visit github repo.</string>
    <string name="history_key" translatable="false">history</string>
    <string name="history_title">History</string>
    <string name="history_summary">Access your history of shown photos, only for photos that cache still valid.</string>
    <string name="setup_wizard_title">Setup Wizard</string>
    <string name="setup_wizard_msg">To actually use &appName; , You need set &appName; as your Wallpaper in next screen</string>
    <string name="feature_title">Feature</string>
    <string name="feature_key" translatable="false">feature</string>
    <string name="category_title">Category</string>
    <string name="categories_key" translatable="false">categories</string>
    <string name="category_title_feature_and_category"><![CDATA[Feature & Category]]></string>
    <string name="default_category">All Categories</string>
    <string name="storage_cache_key" translatable="false">storage_cache_key</string>
    <string name="storage_cache_title">Storage Cache</string>
    <string name="storage_cache_summary">The maximum number of pictures that can be stored in app</string>
    <string name="storage_cache_default" translatable="false">128</string>
    <string name="storage_cache_min" translatable="false">128</string>
    <string name="storage_cache_max" translatable="false">512</string>
    <string name="storage_cache_increment" translatable="false">4</string>
    <string name="refresh_interval_key" translatable="false">refresh_interval</string>
    <string name="refresh_interval_title">Refresh Interval</string>
    <string name="refresh_interval_summary">Refresh wallpaper at the specified time intervals, [30 minutes , 1 day] , %.1f hour</string>
    <string name="settings_title">Settings</string>
    <string name="refresh_interval_default" translatable="false">1</string>
    <string name="refresh_interval_min" translatable="false">1</string>
    <string name="refresh_interval_max" translatable="false">48</string>
    <string name="misc_title">Misc</string>
    <string name="download_via_wifi_key" translatable="false">download_via_wifi</string>
    <string name="download_via_wifi_title">Download only over Wi-Fi</string>
    <string name="download_via_wifi_summary">Only download new pictures when connected to Wi-Fi</string>
    <string name="download_via_wifi_default" translatable="false">true</string>
    <string name="skip_title">Skip</string>
    <string name="skip_summary">Tap the wallpaper with three fingers to skip this one</string>
    <string name="open_config_key" translatable="false">open_config</string>
    <string name="open_config_title">Open Wallpaper Configuration</string>
    <string name="open_config_summary">Open the wallpaper configuration to set &appName; as your live wallpaper app</string>
    <string name="clear_cache_key" translatable="false">clear_cache</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache_dialog_msg">Are you sure you are want to delete all cache files and database ? Clear cache will trigger an update of picture , please make sure you are connected to Wi-Fi . Cache Size : %s .</string>
    <string name="clear_cache_summary">Click to delete cached picture files</string>
    <string name="clear_history_key" translatable="false">clear_history</string>
    <string name="clear_history_title">Clear History</string>
    <string name="clear_history_dialog_msg">Are you sure you are want to clear history? History File Size : %s .</string>
    <string name="clear_history_summary">Click to clear history db and history files</string>
    <string name="show_nsfw_key" translatable="false">show_nsfw</string>
    <string name="show_nsfw_default" translatable="false">false</string>
    <string name="show_nsfw_title">NSFW</string>
    <string name="show_nsfw_summary">Whether to show Not Safe For Work wallpaper</string>
    <string name="feature_category_changed_hint">Changes will not become effective immediately unless you clear the cache , clear cache will trigger an update of picture , please make sure you are connected to Wi-Fi .</string>
    <string name="hint">Hint</string>
    <string name="category_conflict_info">Nude category is NSFW , please enable NSFW first.</string>
    <string name="nsfw_conflict_info">You may not disable NSFW when only select Nude category.</string>
    <string name="mode_key" translatable="false">mode</string>
    <string name="mode_title">Mode</string>
    <string name="mode_summary">On:Web Mode, use web pictures as wallpaper source\nOff:Local Mode, use your local pictures as wallpaper source.</string>
    <string name="select_local_photo_title">Please Select Directory</string>
    <string name="select_local_photo_msg">There is no local photo information in database, please select your wallpaper directory.</string>
    <string name="selection_error">Sorry, can\'t get a valid return value</string>
    <string name="reading_local_photo_info">Reading local photo information…</string>
    <string name="cannot_find_valid_photo_files">Sorry, can\'t find valid photo files in the target directory</string>
    <string name="photo_dirs_key" translatable="false">photo_dirs</string>
    <string name="photo_dirs_title">Photo Directories</string>
    <string name="local_photo_dir_dialog_positive_btn">Delete</string>
    <string name="local_photo_dir_dialog_negative_btn">Cancel</string>
    <string name="local_photo_dir_dialog_neutral_btn">Select</string>
    <string name="local_photo_dir_number_limit">Can\'t be more than 5 directories</string>
    <string name="can_not_delete_all_dir">You can\'t delete all directories</string>
    <string name="parallax_effect_key" translatable="false">parallax_effect</string>
    <string name="parallax_effect_title">Parallax Effect</string>
    <string name="parallax_effect_summary">Move wallpaper around when swiping through home screens.Requires support from the launcher application. As I know, samsung、huawei default launcher may not support, if the wallpaper divided, please turn off this effect.</string>
    <string name="five_hundred_px_logo_title">Goto 500px</string>
    <string name="first_in_double_tap_photo_detail_msg">You can drag the photo to adjust the photo\'s start of show area.</string>
    <string name="double_tap_photo_detail_load_res_failed">Sorry, failed to load this photo.</string>
    <string name="control_title">Control</string>
    <string name="double_tap_title">Open Wallpaper Detail Page</string>
    <string name="double_tap_summary">Double tap the wallpaper to open the wallpaper\'s detail page. You can drag the photo to adjust the photo\'s start of show area <b><i><u>temporarily</u></i></b></string>
    <string name="permanently_enable_custom_offset_key" translatable="false">permanently_enable_custom_offset</string>
    <string name="permanently_enable_custom_offset_default" translatable="false">false</string>
    <string name="permanently_enable_custom_offset_title">Adjust Show Area Permanently</string>
    <string name="permanently_enable_custom_offset_summary">You can adjust the show area of wallpaper in the wallpaper detail page.</string>
    <string name="open_wallpaper_detail_of_settings_key" translatable="false">open_wallpaper_detail</string>
    <string name="open_wallpaper_detail_of_settings_title">Open Wallpaper Detail Page</string>
    <string name="open_wallpaper_detail_of_settings_summary">You can drag the photo to adjust the photo\'s start of show area <b><i><u>permanently</u></i></b></string>
    <string name="open_wallpaper_detail_page_toast">Need to set &appName;
        as Wallpaper first.</string>
</resources>
